--- a/day_2_itinerary.html
+++ b/day_2_itinerary.html
@@ -30,15 +30,20 @@
             <a href="index.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">總覽</a>
             <!-- Day 1 -->
             <a href="day_1_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 1</a>
-            <!-- Day 2 (Active) -->
+            <!-- Day 2 -->
             <a href="day_2_itinerary.html" class="px-3 py-1 text-sm font-semibold rounded-full bg-blue-600 text-white shadow-lg transition duration-150">Day 2</a>
-            <!-- Day 3 to Day 8 (Placeholder) -->
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 3</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 4</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 5</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 6</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 7</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 8</a>
+            <!-- Day 3 -->
+            <a href="day_3_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 3</a>
+            <!-- Day 4 -->
+            <a href="day_4_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 4</a>
+            <!-- Day 5 -->
+            <a href="day_5_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 5</a>
+            <!-- Day 6 -->
+            <a href="day_6_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 6</a>
+            <!-- Day 7 -->
+            <a href="day_7_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 7</a>
+            <!-- Day 8 (Active) -->
+            <a href="day_8_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 8</a>
         </div>
     </div>
     
@@ -204,7 +209,7 @@
                 </div>
                 <div class="flex items-start">
                     <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 3：</span>
-                    <span class="ml-2">抵達京都車站後，步行回 **CHISUN PREMIUM 京都九條** 飯店。</span>
+                    <span class="ml-2">抵達京都車站後，步行回 <strong>CHISUN PREMIUM 京都九條</strong> 飯店。</span>
                 </div>
             </div>
             
@@ -245,9 +250,9 @@
                 晚餐：推薦選項 (京都車站周邊)
             </h4>
             <p class="text-sm text-gray-700 ml-4 space-y-1">
-                <span class="font-bold text-blue-700">建議：</span> 考量回程便利性，推薦在 **JR 京都車站** 周邊用餐。<br>
+                <span class="font-bold text-blue-700">建議：</span> 考量回程便利性，推薦在 <strong>JR 京都車站</strong> 周邊用餐。<br>
                 <span class="font-bold text-blue-700">選項 A：</span> 京都車站伊勢丹百貨 10 樓「拉麵小路」(集合多家日本各地拉麵)。<br>
-                <span class="font-bold text-blue-700">選項 B：</span> **八條口** (靠近飯店側) 有許多居酒屋和特色餐廳，選擇較多且接近飯店。
+                <span class="font-bold text-blue-700">選項 B：</span> <strong>八條口</strong> (靠近飯店側) 有許多居酒屋和特色餐廳，選擇較多且接近飯店。
             </p>
             <!-- 晚餐是推薦選項，所以連結放在說明下方，可點擊編輯填入地圖網址 -->
             <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
