--- a/day_4_itinerary.html
+++ b/day_4_itinerary.html
@@ -34,13 +34,16 @@
             <a href="day_2_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 2</a>
             <!-- Day 3 -->
             <a href="day_3_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 3</a>
-            <!-- Day 4 (Active) -->
+            <!-- Day 4 -->
             <a href="day_4_itinerary.html" class="px-3 py-1 text-sm font-semibold rounded-full bg-blue-600 text-white shadow-lg transition duration-150">Day 4</a>
-            <!-- Day 5 to Day 8 (Placeholder) -->
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 5</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 6</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 7</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 8</a>
+            <!-- Day 5 -->
+            <a href="day_5_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 5</a>
+            <!-- Day 6 -->
+            <a href="day_6_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 6</a>
+            <!-- Day 7 -->
+            <a href="day_7_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 7</a>
+            <!-- Day 8 (Active) -->
+            <a href="day_7_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 8</a>
         </div>
     </div>
     
@@ -85,6 +88,10 @@
                     <span>本日行程極為緊湊，務必準時搭乘早班特急列車。</span>
                 </div>
             </div>
+            <!-- 新增丹後海陸交通公車網站連結按鈕 -->
+            <a href="https://www.tankai.jp/tw/bus/tankai-bus/" target="_blank" class="mt-4 inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md">
+                🚌 丹後海陸交通公車官方網站
+            </a>
         </div>
 
         <!-- 區塊二：去程：京都 → 天橋立：分步導航 -->
@@ -178,8 +185,7 @@
                     <p class="text-sm text-gray-600 ml-5">
                         <span class="font-bold text-pink-700">交通：</span> 丹後海陸交通公車<br>
                         <span class="font-bold text-pink-700">時長：</span> 約 <strong>1 小時</strong> (單程公車)<br>
-                        <span class="font-bold text-pink-700">預計停留：</span><strong>1.5 小時</strong><br>
-                        <span class="font-bold text-pink-700">備註：</span> 於<strong>傘松公園</strong>下山後，搭公車前往伊根，務必注意公車班次（冬季班次較少）。
+                        <span class="font-bold text-pink-700">備註：</span> 於<strong>傘松公園</strong>下山後，在纜車下方的公車站搭乘公車前往**伊根**，務必注意公車班次（冬季班次較少）。
                     </p>
                 </li>
                 <li>
@@ -201,7 +207,13 @@
             <div class="space-y-3 text-gray-700">
                 <div class="flex items-start">
                     <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 1：</span>
-                    <span class="ml-2">從伊根/傘松公園搭乘公車回到 <strong>天橋立站</strong>。</span>
+                    <span class="ml-2">
+                        從<strong>伊根</strong>搭乘**丹後海陸交通公車**回到 <strong>天橋立站</strong>。
+                        <br>
+                        <span class="font-bold text-blue-700">交通：</span> 丹後海陸交通公車
+                        <br>
+                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>1 小時</strong> (請務必預留公車等待時間)
+                    </span>
                 </div>
                 <div class="flex items-start">
                     <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 2：</span>
