--- a/index.html
+++ b/index.html
@@ -26,19 +26,24 @@
     <!-- Daily Navigation Bar (Fixed at top for mobile experience) -->
     <div class="sticky top-0 z-10 bg-white border-b border-gray-200 shadow-md mb-6 py-2 overflow-x-auto">
         <div class="flex space-x-2 px-4 whitespace-nowrap">
-            <!-- 總覽 (Active) -->
+            <!-- 總覽 (New Link) -->
             <a href="index.html" class="px-3 py-1 text-sm font-semibold rounded-full bg-blue-600 text-white shadow-lg transition duration-150">總覽</a>
             <!-- Day 1 -->
             <a href="day_1_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 1</a>
             <!-- Day 2 -->
             <a href="day_2_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 2</a>
-            <!-- Day 3 to Day 8 (Placeholder) -->
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 3</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 4</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 5</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 6</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 7</a>
-            <a href="#" class="px-3 py-1 text-sm font-medium rounded-full text-gray-400 bg-gray-100 cursor-default">Day 8</a>
+            <!-- Day 3 -->
+            <a href="day_3_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 3</a>
+            <!-- Day 4 -->
+            <a href="day_4_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 4</a>
+            <!-- Day 5 -->
+            <a href="day_5_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 5</a>
+            <!-- Day 6 -->
+            <a href="day_6_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 6</a>
+            <!-- Day 7 -->
+            <a href="day_7_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 7</a>
+            <!-- Day 8 (Active) -->
+            <a href="day_8_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 8</a>
         </div>
     </div>
 
@@ -162,14 +167,14 @@
                 *此處將連結至後續規劃的每日行程檔案*
             </p>
             <ul class="space-y-2 text-gray-700 font-medium">
-                <li><a href="day_1_itinerary.html" class="text-blue-500 hover:underline">Day 1 (2/4): 抵達神戶與前往奈良觀光 (已規劃)</a></li>
-                <li><a href="day_2_itinerary.html" class="text-blue-500 hover:underline">Day 2 (2/5): 嵐山竹林、天龍寺一日遊 (已規劃)</a></li>
-                <li><a href="#" class="text-gray-400 cursor-default">Day 3 (2/6): 待規劃...</a></li>
-                <li><a href="#" class="text-gray-400 cursor-default">Day 4 (2/7): 待規劃...</a></li>
-                <li><a href="#" class="text-gray-400 cursor-default">Day 5 (2/8): 待規劃...</a></li>
-                <li><a href="#" class="text-gray-400 cursor-default">Day 6 (2/9): 待規劃...</a></li>
-                <li><a href="#" class="text-gray-400 cursor-default">Day 7 (2/10): 待規劃...</a></li>
-                <li><a href="#" class="text-gray-400 cursor-default">Day 8 (2/11): 前往關西機場與回程</a></li>
+                <li><a href="day_1_itinerary.html" class="text-blue-500 hover:underline">Day 1 (2/4): 抵達神戶與前往奈良觀光</a></li>
+                <li><a href="day_2_itinerary.html" class="text-blue-500 hover:underline">Day 2 (2/5)：京都嵐山經典一日遊</a></li>
+                <li><a href="day_3_itinerary.html" class="text-blue-500 hover:underline">Day 3 (2/6)：清水寺、東山古街與祇園</a></li>
+                <li><a href="day_4_itinerary.html" class="text-blue-500 hover:underline">Day 4 (2/7)：天橋立與伊根舟屋</a></li>
+                <li><a href="day_5_itinerary.html" class="text-blue-500 hover:underline">Day 5 (2/8)：伏見稻荷與東福寺)</a></li>
+                <li><a href="day_6_itinerary.html" class="text-blue-500 hover:underline">Day 6 (2/9)：貴船、鞍馬健行與叡山電車</a></li>
+                <li><a href="day_7_itinerary.html" class="text-blue-500 hover:underline">Day 7 (2/10)：宇治與銀閣寺</a></li>
+                <li><a href="day_8_itinerary.html" class="text-blue-500 hover:underline">Day 8 (2/11)：飯店 → 關西機場 (KIX)</a></li>
             </ul>
         </div>
         
