--- a/day_1_itinerary.html
+++ b/day_1_itinerary.html
@@ -25,7 +25,7 @@
 <body class="p-0 sm:p-6">
     <!-- Daily Navigation Bar (Fixed at top for mobile experience) -->
     <div class="sticky top-0 z-10 bg-white border-b border-gray-200 shadow-md mb-6 py-2 overflow-x-auto">
-        <div class="flex space-x-2 px-4 whitespace-nowrap">
+        <div class="flex space-x-2 px-4 whitespace-nowrap justify-center">
             <!-- 總覽 (New Link) -->
             <a href="index.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">總覽</a>
             <!-- Day 1 -->
@@ -77,7 +77,7 @@
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">💰 總交通費用：</span>
-                    <span>約 <strong>¥2,040</strong> (神戶→奈良 + 奈良→京都)</span>
+                    <span>約 <strong>¥1440+¥980=¥2420</strong> (神戶→奈良 + 奈良→京都)</span>
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">🎯 最終目的地：</span>
@@ -133,10 +133,14 @@
                         <span class="font-bold text-blue-700">交通：</span> 電車 (直通)<br>
                         <span class="font-bold text-blue-700">車種/路線：</span> 阪神本線 <strong>快速急行</strong> → <strong>近鐵奈良線</strong><br>
                         <span class="font-bold text-blue-700">時長：</span> 約 <strong>1 小時 17 分鐘</strong><br>
-                        <span class="font-bold text-blue-700">費用：</span> 約 <span class="text-red-600 font-extrabold">¥1,060</span><br>
-                        <span class="font-bold text-blue-700">指示：</span> 尋找開往<strong>近鐵奈良</strong>方向的快速急行列車，通常無需換乘即可直達，是前往奈良最方便的電車路線。
+                        <span class="font-bold text-blue-700">費用：</span> 約 <span class="text-red-600 font-extrabold">¥1,100</span><br>
+                        <span class="font-bold text-blue-700">指示：</span> 尋找開往<strong>快速急行近鐵奈良</strong>方向的快速急行列車，通常無需換乘即可直達，是前往奈良最方便的電車路線。
                     </p>
                 </div>
+            </div>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-center"><a href="https://maps.app.goo.gl/zATpNgRSXvVv14Xq8" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-blue-400 rounded-lg hover:bg-blue-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
             </div>
         </div>
 
@@ -198,13 +202,13 @@
                 <div class="flex items-start">
                     <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 2：</span>
                     <span class="ml-2">
-                        前往 <strong>近鐵京都站</strong> (Kyoto Station)。
+                        前往 <strong>烏丸線九条站</strong> (九条駅)。
                         <br>
                         <span class="font-bold text-blue-700">交通：</span> 電車<br>
-                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>近鐵奈良線急行</strong><br>
-                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>55 分鐘</strong>
+                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>近鐵京都線急行國際會館</strong><br>
+                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>50 分鐘</strong>
                         <br>
-                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">¥640</span> (亦可選擇特急列車，需加購特急券)
+                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">¥980</span>
                     </span>
                 </div>
                 <div class="flex items-start">
@@ -212,7 +216,11 @@
                     <span class="ml-2">抵達京都車站後，從<strong>八條口</strong> (Hachijo Exit, 南側) 出站，步行約 <strong>7-10 分鐘</strong>至 <strong>CHISUN PREMIUM 京都九條</strong> 飯店辦理入住手續。</span>
                 </div>
             </div>
-            
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/LvQPL7BnLU82dWTk7" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
+            </div>
         </div>
 
         <!-- 區塊五：餐點規劃 (Meals) - 已移至最下方 -->
@@ -229,9 +237,9 @@
                 <span class="font-bold text-blue-700">特色：</span> 奈良地區知名的釜飯名店，口味清淡，鄰近奈良公園。<br>
                 <span class="font-bold text-blue-700">備註：</span> 人氣店鋪，建議在 11:30 前前往排隊，以節省時間。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/DdXvLc3kLfp5QeuJ6" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>
 
             <!-- 點心 -->
             <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
@@ -241,21 +249,21 @@
                 <span class="font-bold text-blue-700">特色：</span> 位於近鐵奈良車站附近商店街，以現場高速搗麻糬聞名，麻糬口感軟糯。<br>
                 <span class="font-bold text-blue-700">地點：</span> 奈良商店街中，可順路經過。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/L2eNX3uTigF75vPXA" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>
 
             <!-- 晚餐 -->
             <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
-                晚餐：京都拉麵小路 (京都車站)
+                晚餐：Naosan(直さん)
             </h4>
             <p class="text-sm text-gray-700 ml-4 space-y-1">
-                <span class="font-bold text-blue-700">建議：</span> 位於京都車站<strong>伊勢丹百貨 10 樓</strong>，集合多家日本各地特色拉麵，選擇多元。<br>
-                <span class="font-bold text-blue-700">備註：</span> 抵達京都車站後可直接前往，用餐完畢後步行回飯店距離近。
+                <span class="font-bold text-blue-700">建議：</span> 位於九条站附近，日式居酒屋，內部有卡拉OK！<br>
+                <span class="font-bold text-blue-700">備註：</span> Check in後，放完行李，有體力的話再去吃，要不然就是簡單便利商店解決，準備明天的行程。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/YaBUsv3QpMoDkwGx7" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>
         </div>
     </div>
 </body>
