--- a/day_8_itinerary.html
+++ b/day_8_itinerary.html
@@ -25,7 +25,7 @@
 <body class="p-0 sm:p-6">
     <!-- Daily Navigation Bar (Fixed at top for mobile experience) -->
     <div class="sticky top-0 z-10 bg-white border-b border-gray-200 shadow-md mb-6 py-2 overflow-x-auto">
-        <div class="flex space-x-2 px-4 whitespace-nowrap">
+        <div class="flex space-x-2 px-4 whitespace-nowrap justify-center">
             <!-- 總覽 (New Link) -->
             <a href="index.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">總覽</a>
             <!-- Day 1 -->
@@ -72,12 +72,12 @@
             <!-- 關鍵數據列表 -->
             <div class="space-y-2">
                 <div class="flex items-center text-gray-700">
-                    <span class="font-bold w-32 text-indigo-600">⏱️ 建議出發時間：</span>
+                    <span class="font-bold w-32 text-indigo-600">⏱️ 出發時間：</span>
                     <span><strong>07:00</strong> 前從飯店出發 (需預留充足的 check-in 時間)</span>
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">💰 交通費用：</span>
-                    <span>約 <strong>¥3,400+</strong> (Haruka 特急列車費用)</span>
+                    <span>約 <strong>¥3,400+</strong> (HARUKA9 特急列車費用)</span>
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">🎯 建議交通：</span>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">💡 提示：</span>
-                    <span>請於**出發前**確認**Haruka**的時刻表，確保有足夠的彈性時間。</span>
+                    <span>請於<strong>出發前</strong>確認<strong>Haruka</strong>的時刻表，確保有足夠的彈性時間。</span>
                 </div>
             </div>
         </div>
@@ -112,27 +112,28 @@
 
                 <!-- 步驟 2: Kyoto -> KIX Haruka Limited Express -->
                 <div class="border-l-4 border-green-500 pl-4">
-                    <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
+                  <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
                         <span class="bg-green-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">2</span> ✈️ 京都車站 → 關西機場 (KIX)
                     </h4>
                     <p class="text-sm text-gray-600 ml-8">
                         <span class="font-bold text-blue-700">區間：</span> <strong>京都站</strong> → <strong>關西國際機場</strong> (KIX)<br>
                         <span class="font-bold text-blue-700">交通：</span> JR 特急列車<br>
-                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>關空特快 Haruka</strong> (はるか)<br>
-                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>1 小時 20 分鐘</strong><br>
-                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">約 ¥3,400</span> (自由座/普通席)<br>
-                        <span class="font-bold text-blue-700">建議班次：</span> 建議搭乘 <strong>07:30</strong> 左右的班次，確保 09:00 前抵達機場。
+                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>關空特快 Haruka 9</strong> (はるか)<strong class="text-red-600 font-extrabold">(最晚一定要搭上)</strong><br>
+						<span class="font-bold text-blue-700">乘車時間：</span> <strong class="text-red-600 font-extrabold">07：48</strong><br>
+						<span class="font-bold text-blue-700">抵達時間：</span> <strong class="text-red-600 font-extrabold">09：13</strong><br>
+                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>1 小時 25 分鐘</strong><br>
+                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">使用JR PASS(指定席需要先預訂)</span> <br>
                     </p>
                 </div>
                 
                 <!-- 步驟 3: KIX Check-in -->
                 <div class="border-l-4 border-pink-500 pl-4">
-                    <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
+                  <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
                         <span class="bg-pink-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">3</span> 🛫 抵達機場與 Check-in
                     </h4>
                     <p class="text-sm text-gray-600 ml-8">
-                        <span class="font-bold text-blue-700">指示：</span> 抵達 KIX 後，依循指示牌前往**第一航廈 (T1)** 辦理長榮航空 (BR) 的登機手續。<br>
-                        <span class="font-bold text-blue-700">預計抵達：</span> 約 <strong>09:00</strong><br>
+                        <span class="font-bold text-blue-700">指示：</span> 抵達 <strong class="text-red-600 font-extrabold">關西機場</strong>後，依循指示牌前往<strong class="text-red-600 font-extrabold">第一航廈 (T1) </strong>辦理長榮航空 (BR) 的登機手續。<br>
+<span class="font-bold text-blue-700">預計抵達：</span> 約 <strong>09:20</strong><br>
                         <span class="font-bold text-blue-700">備註：</span> 國際線建議提前 2 小時報到。
                     </p>
                 </div>
@@ -149,7 +150,6 @@
                 <li>護照、機票、手機、錢包 (現金/信用卡)</li>
                 <li>飯店房間內是否有遺漏物品 (充電器、衣物)</li>
                 <li>行李是否已秤重，符合航空公司規定 (長榮 BR177)</li>
-                <li>**IC 卡/車票**內餘額是否足夠支付 Haruka 費用</li>
             </ul>
         </div>
     </div>
