--- a/day_7_itinerary.html
+++ b/day_7_itinerary.html
@@ -25,7 +25,7 @@
 <body class="p-0 sm:p-6">
     <!-- Daily Navigation Bar (Fixed at top for mobile experience) -->
     <div class="sticky top-0 z-10 bg-white border-b border-gray-200 shadow-md mb-6 py-2 overflow-x-auto">
-        <div class="flex space-x-2 px-4 whitespace-nowrap">
+        <div class="flex space-x-2 px-4 whitespace-nowrap justify-center">
             <!-- 總覽 (New Link) -->
             <a href="index.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">總覽</a>
             <!-- Day 1 -->
