--- a/day_2_itinerary.html
+++ b/day_2_itinerary.html
@@ -77,16 +77,13 @@
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">💰 總交通費用：</span>
-                    <span>約 <strong>¥500</strong> (JR 往返)</span>
+                    <span>約 <strong>¥670</strong> (JR 往返+公車)</span>
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">🎯 抵達目標：</span>
                     <span>JR <strong>嵯峨嵐山站</strong> / JR <strong>梅小路京都西站</strong></span>
                 </div>
-                <div class="flex items-center text-gray-700">
-                    <span class="font-bold w-32 text-indigo-600">💡 提示：</span>
-                    <span>從**梅小路京都西站**步行至博物館距離更短，約 5-7 分鐘。</span>
-                </div>
+
             </div>
         </div>
 
@@ -112,17 +109,22 @@
 
                 <!-- 步驟 2: Kyoto -> Saga-Arashiyama JR Line -->
                 <div class="border-l-4 border-green-500 pl-4">
-                    <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
+                  <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
                         <span class="bg-green-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">2</span> 🚂 京都車站 → 嵯峨嵐山站
                     </h4>
                     <p class="text-sm text-gray-600 ml-8">
                         <span class="font-bold text-blue-700">交通：</span> JR 電車<br>
-                        <span class="font-bold text-blue-700">車種/路線：</span> JR <strong>嵯峨野線</strong> (或稱山陰本線)<br>
-                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>16 分鐘</strong><br>
+                        <span class="font-bold text-blue-700">車種/路線：</span> JR <strong>嵯峨野線</strong> (<strong>山陰本線</strong>)<br>
+<span class="font-bold text-blue-700">時長：</span> 約 <strong>16 分鐘</strong><br>
                         <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">¥240</span><br>
                         <span class="font-bold text-blue-700">指示：</span> 找尋開往 <strong>嵯峨嵐山</strong>、**亀岡** 或 **園部** 方向的列車。
                     </p>
                 </div>
+            </div>
+			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/1wjG7ntkNo8UGkYN8" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-400 rounded-lg hover:bg-gray-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
             </div>
         </div>
 
@@ -168,7 +170,7 @@
                     </p>
                 </li>
             </ol>
-			            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
                 <a href="https://maps.app.goo.gl/B6VdoNf6bNtpigcJ8" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
                 🗺️ 路線圖
             </a>
@@ -208,14 +210,19 @@
             <!-- 景點資訊 -->
             <div class="space-y-2 text-gray-800 border-t pt-3">
                 <div class="flex items-center text-gray-700">
-                    <span class="font-bold w-32 text-pink-600">預計停留：</span>
+                    <span class="font-bold w-20 text-pink-600">預計停留：</span>
                     <span><strong>2.5 小時</strong> (建議參觀時間)</span>
                 </div>
                 <div class="flex items-center text-gray-700">
-                    <span class="font-bold w-32 text-pink-600">特色：</span>
+                    <span class="font-bold w-20 text-pink-600">特色：</span>
                     <span>展示多輛日本經典火車頭，可近距離觀看扇形車庫與蒸汽火車運行。</span>
                 </div>
             </div>
+			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/mKgP4izVvnFVtguMA" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-gary-500 bg-yellow-300 rounded-lg hover:bg-yellow-500 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
+            </div>			
         </div>
 
 
@@ -238,15 +245,19 @@
                         <span class="font-bold text-blue-700">交通：</span> JR 嵯峨野線 (往京都方向)<br>
                         <span class="font-bold text-blue-700">時長：</span> 約 <strong>3 分鐘</strong>
                         <br>
-                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">¥140</span>
+                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">¥230</span>
                     </span>
                 </div>
                 <div class="flex items-start">
                     <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 3：</span>
-                    <span class="ml-2">在<strong>京都車站</strong>享用晚餐後 (見下方推薦)，從**八條口**步行回 <strong>CHISUN PREMIUM 京都九條</strong> 飯店 (約 7-10 分鐘)。</span>
+                    <span class="ml-2">在<strong>炸豬排一番(とんかつ 一番)</strong>享用晚餐後，搭乘公車<strong>(207 City Bus )</strong>&nbsp;從<strong>七条大宮・京都水族館前</strong>上車到<strong>九条河原町</strong>下車，再步行<strong>CHISUN PREMIUM 京都九條</strong> 飯店 (約 20 分鐘)。</span>
                 </div>
             </div>
-            
+			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/nxfqHAt8JnLhPHdx7" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-gary-500 bg-red-300 rounded-lg hover:bg-red-400 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
+            </div>	            
         </div>
 
         <!-- 區塊六：餐點規劃 (Meals) -->
