--- a/day_3_itinerary.html
+++ b/day_3_itinerary.html
@@ -153,7 +153,7 @@
                     </p>
                 </li>
                 <li>
-                    <span class="font-bold text-pink-600">一寧坂 (Ichinen-zaka) & 高石塀小路 (Ishibei-koji)</span>
+                    <span class="font-bold text-pink-600">一寧坂 (Ichinen-zaka) &amp; 石塀小路 (Ishibei-koji)</span>
                     <p class="text-sm text-gray-600 ml-5">
                         <span class="font-bold text-pink-700">預計停留：</span><strong>0.5 小時</strong><br>
                         <span class="font-bold text-pink-700">特色：</span>隱藏在主街道旁的小徑，特別是高石塀小路，氛圍寧靜優雅，充滿高級日式旅館。
@@ -167,6 +167,11 @@
                     </p>
                 </li>
             </ol>
+			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/H7m2AXboMsh2htoA8" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
+            </div>			
         </div>
 
         <!-- 區塊四：祇園傍晚漫步路線 -->
